--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
   --color-segund: #735a5a;
   --color-third: #a69292;
   --bg-color: #f2e8e4;
+  --white:#fff;
+  --black:black;
 }
 nav::-webkit-scrollbar {
   width: 8px;
@@ -26,7 +28,7 @@ nav::-webkit-scrollbar-track {
 body {
   background-color: var(--bg-color);
   width: 100%;
-  margin-bottom: 3000px;
+  margin-bottom: 500px;
 }
 header {
   position: relative;
@@ -60,13 +62,15 @@ header {
   font-size: 0.8em;
 }
 nav {
+  
+  display: flex;
   overflow-x: scroll;
   width: 100%;
 }
 nav ul {
   display: flex;
   flex-direction: row;
-
+  gap: 1.2em;
   list-style: none;
   padding: 10px;
 }
@@ -79,9 +83,113 @@ nav a {
   font-size: 1.8em;
   text-decoration: none;
   transition-duration: 0.8s;
+  white-space: nowrap;
 }
 nav a:hover, nav a:focus{
     background-color: var(--color-third);
     padding: 8px;
     border-radius:20px;
+}
+#presentation{
+  margin-top: 10px;
+  margin-bottom: -20px;
+  text-align: center;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.185);
+}
+#presentation h1{
+color: var(--color-first);
+font-family: var(--Roboto);
+margin-bottom: 10px;
+
+}
+.containerPresentation>article>p{
+  text-align: justify;
+ color:rgba(2, 2, 2, 0.774) ;
+ font-family: var(--Roboto);
+ font-size: 1.1em;
+ font-weight: 500;
+ padding: 5px;
+}
+.containerPresentation img{
+  margin-top: 10px;
+  width: 70%;
+  max-width: 750px;
+}
+span{
+  color: #e93899;
+}
+
+
+details{
+  margin-top: 50px;
+  background-color: var(--white);
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.151);
+}
+summary{
+  display: flex;
+  align-items: center;
+  list-style: none;
+  background-color: var(--white);
+  width: 100%;
+ 
+  border-top: 5px solid var(--color-first);
+  border-radius:10px 10px 0px 0px;
+  
+}
+summary h2{
+  padding: 5px;
+  font-family: var(--Rowdies);
+  color: var(--color-first);
+}
+.fa-caret-down{
+  color: var(--color-first);
+  position: absolute;
+  right: 10px;
+  font-size: 30px;
+  transition-duration: 0.6s;
+}
+.container{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.185);
+
+}
+.descriçao{
+  margin: 10px;
+}
+.descriçao p {
+  color: rgba(2, 2, 2, 0.774);
+  font-weight: 500;
+  font-family: var(--Roboto);
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.descriçao h3{
+  color: var(--color-segund);
+  font-family: var(--Roboto);
+}
+.descriçao a{
+  color: #e93899;
+  font-family: var(--Roboto);
+  font-size: 1em;
+  font-weight: 500;
+  text-decoration: none;
+}
+.valor{
+  margin-top: 20px;
+  color: var(--color-first);
+  font-size: 1.1em;
+  font-family: var(--Roboto);
+  font-weight: 900;
+}
+
+.imgProduto{
+ margin: 10px;
+}
+.imgProduto img{
+ width: 130px;
 }
