--- a/css/style.css
+++ b/css/style.css
@@ -62,10 +62,14 @@ header {
   font-size: 0.8em;
 }
 nav {
-  
+  position: fixed;
+  z-index: 10;
+  bottom: 0;
   display: flex;
   overflow-x: scroll;
   width: 100%;
+  background-color: var(--color-third);
+  /* border-radius: 15px 15px 0px 0px; */
 }
 nav ul {
   display: flex;
@@ -86,7 +90,7 @@ nav a {
   white-space: nowrap;
 }
 nav a:hover, nav a:focus{
-    background-color: var(--color-third);
+    background-color: rgba(0, 0, 0, 0.082);
     padding: 8px;
     border-radius:20px;
 }
@@ -116,6 +120,7 @@ details{
   margin-top: 50px;
   background-color: var(--white);
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.151);
+  border-radius: 20px 20px 0px 0px;
 }
 summary{
   display: flex;
